--- a/mummyjoe/package.json
+++ b/mummyjoe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mummyjoe",
   "version": "0.1.0",
-  "homepage": "https://mummy-joe.github.io/mummyjoe.com",
+  "homepage": "https://mummy-joe.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
